2006-04-21  Don Allingham  <don@gramps-project.org>
	* src/ViewManager.py: start of cleaned up plugin manager
	* src/Errors.py: warning error for unavailable plugin
	* src/PluginUtils/__init__.py: start of cleaned up plugin manager
	* src/PluginUtils/_Plugins.py: start of cleaned up plugin manager
	* src/PluginUtils/_PluginMgr.py: start of cleaned up plugin manager
	* src/docgen/PdfDoc.py: Issue unavailable error on reportlab failure
	* src/docgen/LPRDoc.py: Issue unavailable error on gnomeprint failure

2006-04-20  Don Allingham  <don@gramps-project.org>
	* src/DataViews/_EventView.py: pychecker fixes
	* src/ViewManager.py: call scratchpad properly
	* src/GrampsCfg.py: pychecker fixes
	* src/Editors/_EditEvent.py
	* src/DisplayModels.py:pychecker fixes
	* src/DisplayTabs.py: pychecker fixes
	* src/ScratchPad.py: use ManagedWindow
	* src/GenericFilter.py: pychecker fixes
	* src/ImgManip.py: pychecker fixes
	* src/PageView.py: pychecker fixes
	* src/ArgHandler.py: pychecker fixes
	* src/Editors/_EditFamily.py: Handle marker type in UI
	* src/DataViews/_FamilyViews.py: clean up
	* src/DataViews/_PedigreeViews.py: clean up
	* src/RelLib/_Name.py: fix type on set_type

2006-04-20  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py: Upgrade to new types.
	* src/GrampsDb/_ReadGedcom.py: Adapt to new types.
	* src/RelLib/_Event.py: Properly set type.
	* src/RelLib/_EventRef.py: Properly set type.
	* src/RelLib/_Family.py: Properly set type.
	* src/RelLib/_Name.py: Properly set type.
	* src/RelLib/_Person.py: Properly set type.
	* src/RelLib/_PrimaryObject.py: Properly set type.
	* src/RelLib/_RepoRef.py: Properly set type.
	* src/RelLib/_Repository.py: Properly set type.
	* src/RelLib/_Url.py: Properly set type.

2006-04-20  Brian Matherly  <pez4brian@users.sourceforge.net>
	* src/docgen/ODFDoc.py: Fix space at begining of paragraph

2006-04-20  Don Allingham  <don@gramps-project.org>